--- a/basketball.html
+++ b/basketball.html
@@ -10,7 +10,7 @@
                                 <h3>HOME</h3>
                             </div>
                             <div class="guest">
-                                <h3>GUEST</h3>
+                                <h3>AWAY</h3>
                             </div>
                       </div>
             
